<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/edtText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textAlignment="center"
        android:text="@string/output"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edtText"
        android:id="@+id/textText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_below="@id/textText"
        android:layout_margin="20dp"
        android:id="@+id/btn_ganti_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_below="@id/btn_ganti_text"
        android:layout_margin="20dp"
        android:id="@+id/btn_ganti_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>