<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <TextView
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:id="@+id/textAct2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
